--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,37 +1,39 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:textColor">@color/black</item>
+
     </style>
 
-    <style name="NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-    </style>
-
-    <style name="MainLayout" parent="NoActionBar">
-        <item name="android:windowBackground">@color/yellow</item>
+    <style name="p20">
+        <item name="android:padding">20dp</item>
     </style>
 
 
-    <style name="formButtonDark" >
-        <item name="colorButtonNormal">@color/buttonDarkDb</item>
+
+    <style name="LoginBox">
+        <item name="android:layout_margin">20dp</item>
+    </style>
+
+    <style name="LoginBoxTitle">
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:textSize">28sp</item>
+    </style>
+
+    <style name="LoginBoxButton">
+        <item name="android:layout_height">42dp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:background">@drawable/login_button_bg_rounded</item>
     </style>
-
-
-
-
-
-
-
-    <style name="loginBox">
-        <item name="android:windowBackground">@color/white</item>
-        <item name="android:padding">10dp</item>
-    </style>
-
 
 
 </resources>
