--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,5 +35,10 @@
         <item name="android:background">@drawable/login_button_bg_rounded</item>
     </style>
 
+    <style name="LoginBoxSubButton">
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
 
 </resources>
