--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AbstractCodeActivity">
+    android:orientation="vertical"
+    tools:context=".AbstractCodeActivity"
+    style="@style/p20"
+    >
 
     <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
+        style="@style/PinTitle"
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="240dp"
-        android:text="Session:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/pin_title" />
+
+    <TextView
+        style="@style/PinSubTitle"
+        android:id="@+id/pin_sub_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/pin_sub_title" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="272dp"
-        android:layout_marginEnd="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <EditText
+            style="@style/PinNumber"
             android:id="@+id/cn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:maxLength="1"
+            android:maxLength="2"
             android:inputType="numberSigned" />
 
         <EditText
+            style="@style/PinNumber"
             android:id="@+id/cn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,6 +50,7 @@
             android:inputType="numberSigned" />
 
         <EditText
+            style="@style/PinNumber"
             android:id="@+id/cn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,6 +60,7 @@
             android:inputType="numberSigned" />
 
         <EditText
+            style="@style/PinNumber"
             android:id="@+id/cn4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,45 +69,23 @@
             android:maxLength="1"
             android:inputType="numberSigned" />
 
-        <EditText
-            android:id="@+id/cn5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:maxLength="1"
-            android:inputType="numberSigned" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/code_btn"
-        android:layout_width="wrap_content"
+        android:id="@+id/pin_verify_btn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="328dp"
-        android:layout_marginEnd="8dp"
-        android:text="Send"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/pin_button"
+        android:enabled="false"
+        style="@style/YellowRoundedButton"/>
 
     <TextView
-        android:id="@+id/code_id"
-        android:layout_width="wrap_content"
+        android:id="@+id/pin_resend"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="240dp"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/pin_resend"
+        android:onClick="generateNewCode"
+        style="@style/TextCenterButton"
+        />
 
-    <Button
-        android:id="@+id/code_generate_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="328dp"
-        android:text="Generate new"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
