--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -89,7 +89,7 @@
 
                     <Button
                         android:id="@+id/button2"
-                        style="@style/LoginBoxButton"
+                        style="@style/DarkRoundedButton"
                         android:layout_width="match_parent"
                         android:onClick="showPasswordInput"
                         android:text="@string/next" />
@@ -122,7 +122,7 @@
                         android:textSize="18sp" />
 
                     <Button
-                        style="@style/LoginBoxButton"
+                        style="@style/DarkRoundedButton"
                         android:layout_width="match_parent"
                         android:onClick="register"
                         android:text="@string/sign_in" />
