--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="yellow">#ffd523</color>
 
     <color name="formButton">#1f2534</color>
     <color name="inputBorderColor">#efeff4</color>
