--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,24 @@
     </style>
 
 
+    <style name="YellowRoundedButton">
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_height">42dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:background">@drawable/button_yellow_bg_rounded</item>
+    </style>
+
+
+    <style name="DarkRoundedButton">
+        <item name="android:layout_height">42dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:background">@drawable/button_dark_bg_rounded</item>
+    </style>
+
+
 
     <style name="LoginBox">
         <item name="android:layout_margin">20dp</item>
@@ -27,16 +45,32 @@
         <item name="android:textSize">28sp</item>
     </style>
 
-    <style name="LoginBoxButton">
-        <item name="android:layout_height">42dp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:layout_marginTop">20dp</item>
-        <item name="android:layout_marginLeft">0dp</item>
-        <item name="android:background">@drawable/login_button_bg_rounded</item>
-    </style>
-
     <style name="LoginBoxSubButton">
         <item name="android:layout_marginTop">20dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+
+    <style name="TextCenterButton">
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+
+    <style name="PinTitle">
+        <item name="android:layout_marginTop">70dp</item>
+        <item name="android:textSize">35sp</item>
+    </style>
+
+    <style name="PinSubTitle">
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="PinNumber">
+        <item name="android:layout_marginTop">40dp</item>
+        <item name="android:layout_marginBottom">40dp</item>
+        <item name="android:textSize">46sp</item>
         <item name="android:textAlignment">center</item>
     </style>
 
