сcode confirm theming

--- a/app/src/main/res/layout/activity_code.xml
+++ b/app/src/main/res/layout/activity_code.xml
@@ -25,6 +25,7 @@
 
 
     <LinearLayout
+        android:id="@+id/code_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
