--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="android:layout_height">42dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_marginTop">20dp</item>
-        <item name="android:background">@drawable/button_yellow_bg_rounded</item>
+        <item name="android:background">@drawable/btn_yellow_bg_rounded</item>
     </style>
 
 
@@ -31,9 +31,25 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:layout_marginLeft">0dp</item>
-        <item name="android:background">@drawable/button_dark_bg_rounded</item>
+        <item name="android:background">@drawable/btn_dark_bg_rounded</item>
     </style>
 
+
+    <style name="Nav"></style>
+
+    <style name="Nav.Title">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Nav.Status">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:background">@drawable/nav_status_bg_rounded</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
 
 
     <style name="LoginBox">
