--- a/app/src/main/res/drawable-mdpi/side_nav_bar.xml
+++ b/app/src/main/res/drawable-mdpi/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="@color/colorPrimaryDark"
-        android:endColor="@color/colorPrimaryDark"
+        android:centerColor="@color/yellow"
+        android:endColor="@color/yellow"
         android:startColor="@color/yellow"
         android:type="linear" />
 </shape>
