--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="230dp"
+    android:layout_marginBottom="20dp"
     android:background="@drawable/side_nav_bar"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
 
     <ImageView
         android:id="@+id/nav_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="55dp" />
+        android:layout_marginLeft="27dp"
+        android:layout_marginTop="47dp"
+        app:srcCompat="@drawable/btn_radio_shape" />
 
     <TextView
         android:id="@+id/nav_name"
         style="@style/Nav.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/nav_image"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/nav_image"
         android:text="Android sudio" />
 
@@ -37,6 +40,151 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="6dp"
         android:text="Text T" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nav_image"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="22dp"
+        android:orientation="horizontal">
+
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <TableRow
+                style="@style/Nav.Widget.Row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    style="@style/Nav.Widget.Icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    app:srcCompat="@drawable/ic_currency_usd" />
+
+            </TableRow>
+
+            <TableRow
+                style="@style/Nav.Widget.Row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView11"
+                    style="@style/Nav.Widget.Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10.30" />
+            </TableRow>
+
+            <TableRow
+                style="@style/Nav.Widget.Row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    style="@style/Nav.Widget.SubText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/total_earned" />
+            </TableRow>
+
+        </TableLayout>
+
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TableRow
+                style="@style/Nav.Widget.Row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible">
+
+                <ImageView
+                    style="@style/Nav.Widget.Icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    app:srcCompat="@drawable/ic_bookmark_outline" />
+
+            </TableRow>
+
+            <TableRow
+                style="@style/Nav.Widget.Row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    style="@style/Nav.Widget.Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1" />
+            </TableRow>
+
+            <TableRow
+                style="@style/Nav.Widget.Row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    style="@style/Nav.Widget.SubText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/order_count" />
+            </TableRow>
+
+        </TableLayout>
+
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <TableRow
+                style="@style/Nav.Widget.Row"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible">
+
+                <ImageView
+                    style="@style/Nav.Widget.Icon"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    app:srcCompat="@drawable/ic_grin_beam" />
+
+            </TableRow>
+
+            <TableRow
+                style="@style/Nav.Widget.Row"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <TextView
+                    style="@style/Nav.Widget.Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5/5" />
+            </TableRow>
+
+            <TableRow
+                style="@style/Nav.Widget.Row"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <TextView
+                    style="@style/Nav.Widget.SubText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/rating" />
+            </TableRow>
+
+        </TableLayout>
+    </LinearLayout>
+
 </RelativeLayout>
 
 
