--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#fcbe07</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#fdd600</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-    <color name="yellow">#ffd523</color>
+    <color name="yellow">#fdd600</color>
+    <color name="dark_yellow">#ccae2a</color>
 
     <color name="formButton">#1f2534</color>
     <color name="inputBorderColor">#efeff4</color>
