--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,21 +34,48 @@
         <item name="android:background">@drawable/btn_dark_bg_rounded</item>
     </style>
 
-
-    <style name="Nav"></style>
+    <style name="Nav">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
     <style name="Nav.Title">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Nav.Widget"></style>
+
+    <style name="Nav.Widget.Row">
+        <item name="android:paddingRight">30dp</item>
+    </style>
+
+    <style name="Nav.Widget.Icon">
+        <item name="android:layout_marginBottom">6dp</item>
+    </style>
+
+    <style name="Nav.Widget.Text">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="Nav.Widget.SubText">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/dark_yellow</item>
+    </style>
+
     <style name="Nav.Status">
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:background">@drawable/nav_status_bg_rounded</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">normal</item>
         <item name="android:paddingTop">0dp</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
-        <item name="android:paddingBottom">2dp</item>
+        <item name="android:paddingBottom">0dp</item>
     </style>
 
 
