--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -36,51 +36,51 @@
             android:visibility="visible">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/message_header_back_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="14dp"
                 android:layout_marginTop="6dp"
-                android:text="Button" />
+                android:text="Back" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/message_header_image"
                 android:layout_width="39dp"
                 android:layout_height="37dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="29dp"
                 android:layout_marginTop="11dp"
-                android:layout_toEndOf="@+id/button"
+                android:layout_toEndOf="@+id/message_header_back_btn"
                 app:srcCompat="@drawable/btn_radio_shape" />
 
             <TextView
-                android:id="@+id/textView28"
+                android:id="@+id/message_header_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView24"
-                android:layout_marginStart="13dp"
-                android:layout_marginTop="4dp"
-                android:layout_toEndOf="@+id/imageView3"
-                android:text="TextView" />
+                android:layout_alignTop="@+id/message_header_image"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_toEndOf="@+id/message_header_image"
+                android:text="Name" />
 
             <TextView
-                android:id="@+id/textView24"
+                android:id="@+id/message_header_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/imageView3"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="-6dp"
-                android:layout_toEndOf="@+id/imageView3"
-                android:text="TextView" />
+                android:layout_below="@+id/message_header_name"
+                android:layout_marginStart="11dp"
+                android:layout_marginTop="2dp"
+                android:layout_toEndOf="@+id/message_header_image"
+                android:text="23:58" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/message_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/message_inp"
-                android:layout_below="@+id/button"
+                android:layout_below="@+id/message_header_back_btn"
                 android:layout_marginTop="0dp"
                 android:layout_marginBottom="0dp" />
 
