--- a/app/src/main/res/layout/adapter_message_chat_list_item.xml
+++ b/app/src/main/res/layout/adapter_message_chat_list_item.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/list_item_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         app:srcCompat="@drawable/btn_radio_shape" />
 
     <TextView
