--- a/app/src/main/res/layout/adapter_message_chat_list_item.xml
+++ b/app/src/main/res/layout/adapter_message_chat_list_item.xml
@@ -2,9 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/list_item"
+    style="@style/Messenger.ChatList"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
+
 
     <ImageView
         android:id="@+id/list_item_image"
@@ -12,21 +14,44 @@
         android:layout_height="60dp"
         app:srcCompat="@drawable/btn_radio_shape" />
 
-    <TextView
-        android:id="@+id/list_item_name"
+    <RelativeLayout
+        style="@style/Messenger.ChatListContent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Name" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/list_item_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Message" />
+        <TextView
+            android:id="@+id/list_item_name"
+            style="@style/Messenger.UserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:text="Name" />
 
-    <TextView
-        android:id="@+id/list_item_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Time" />
+        <TextView
+            android:id="@+id/list_item_message"
+            style="@style/Messenger.Message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/list_item_name"
+            android:layout_marginTop="0dp"
+            android:text="Message" />
+
+        <TextView
+            android:id="@+id/list_item_time"
+            style="@style/Messenger.Message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="23:34" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:layout_alignParentBottom="true"
+            android:background="@color/message_grey_line" />
+
+    </RelativeLayout>
 </LinearLayout>
