--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#fff</color>
-    <color name="colorPrimaryDark">#000</color>
+    <color name="colorPrimaryDark">#fdd600</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="yellow">#fdd600</color>
     <color name="dark_yellow">#ccae2a</color>
+
+    <color name="message_grey_text">#8F8E8E</color>
+    <color name="message_grey_line">#E9E8E8</color>
+    <color name="message_header_bg">#FAFAFA</color>
 
     <color name="formButton">#1f2534</color>
     <color name="inputBorderColor">#efeff4</color>
