--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -14,8 +14,134 @@
         android:inAnimation="@android:anim/slide_in_left"
         android:outAnimation="@android:anim/slide_out_right">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible">
+
+            <RelativeLayout
+                android:id="@+id/message_header"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_alignParentTop="true"
+                android:background="@color/white"
+                android:visibility="visible">
 
 
+                <ImageButton
+                    android:id="@+id/message_header_back_btn"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@null"
+                    android:padding="4dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/ic_chevron_left" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="64dp"
+                    android:layout_marginTop="10dp"
+                    android:visibility="visible">
+
+
+                    <ImageView
+                        android:id="@+id/message_header_image"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="1dp"
+                        app:srcCompat="@drawable/btn_radio_shape" />
+
+                    <TextView
+                        android:id="@+id/message_header_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_toEndOf="@+id/message_header_image"
+                        android:text="Name" />
+
+                    <TextView
+                        android:id="@+id/message_header_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/message_header_name"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_toEndOf="@+id/message_header_image"
+                        android:text="23:58" />
+                </RelativeLayout>
+
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dip"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/message_grey_line" />
+
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/message_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/message_bottm"
+                android:layout_below="@+id/message_header"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp" />
+
+            <RelativeLayout
+                android:id="@+id/message_bottm"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/white"
+                android:visibility="visible">
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dip"
+                    android:layout_alignParentTop="true"
+                    android:background="@color/message_grey_line" />
+
+                <EditText
+                    android:id="@+id/message_inp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toStartOf="@+id/message_btn"
+                    android:ems="10"
+                    android:hint="Message..."
+                    android:inputType="textPersonName" />
+
+                <ImageButton
+                    android:id="@+id/message_btn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@null"
+                    android:scaleType="centerCrop"
+                    android:tint="@color/yellow"
+                    app:srcCompat="@drawable/ic_telegram_plane" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,10 +154,17 @@
                 android:background="@color/message_header_bg">
 
                 <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/btn_radio_shape" />
+                    android:id="@+id/message_header_back_btn2"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@null"
+                    android:padding="4dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/ic_chevron_left" />
 
                 <View
                     android:layout_width="match_parent"
@@ -53,78 +186,6 @@
                 android:layout_marginEnd="0dp" />
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="visible">
-
-            <Button
-                android:id="@+id/message_header_back_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="6dp"
-                android:text="Back" />
-
-            <ImageView
-                android:id="@+id/message_header_image"
-                android:layout_width="39dp"
-                android:layout_height="37dp"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="29dp"
-                android:layout_marginTop="11dp"
-                android:layout_toEndOf="@+id/message_header_back_btn"
-                app:srcCompat="@drawable/btn_radio_shape" />
-
-            <TextView
-                android:id="@+id/message_header_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/message_header_image"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="1dp"
-                android:layout_toEndOf="@+id/message_header_image"
-                android:text="Name" />
-
-            <TextView
-                android:id="@+id/message_header_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/message_header_name"
-                android:layout_marginStart="11dp"
-                android:layout_marginTop="2dp"
-                android:layout_toEndOf="@+id/message_header_image"
-                android:text="23:58" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/message_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@+id/message_inp"
-                android:layout_below="@+id/message_header_back_btn"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="0dp" />
-
-            <EditText
-                android:id="@+id/message_inp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/message_btn"
-                android:layout_marginBottom="0dp"
-                android:ems="10"
-                android:hint="Message..."
-                android:inputType="textPersonName" />
-
-            <Button
-                android:id="@+id/message_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="4dp"
-                android:text="Send" />
-        </RelativeLayout>
 
     </ViewFlipper>
 
