--- a/app/src/main/res/layout/adapter_message_list_item.xml
+++ b/app/src/main/res/layout/adapter_message_list_item.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/list_item"
+    style="@style/Messenger.Item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-
-
     <TextView
         android:id="@+id/list_item_message"
+        style="@style/Messenger.Message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Message" />
 
     <TextView
         android:id="@+id/list_item_time"
+        style="@style/Messenger.Time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Time" />
+
 </LinearLayout>
