--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="dark_yellow">#ccae2a</color>
 
     <color name="message_grey_text">#8F8E8E</color>
+    <color name="message_grey_time">#B4B4B4</color>
     <color name="message_grey_line">#E9E8E8</color>
     <color name="message_header_bg">#FAFAFA</color>
 
