--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,11 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-    <color name="yellow">#fdd600</color>
+    <color name="yellow">#ffd533</color>
     <color name="dark_yellow">#ccae2a</color>
+    <color name="grey">#B4B4B4</color>
 
+    <color name="message_yellow_bg">#FADB63</color>
     <color name="message_grey_text">#8F8E8E</color>
     <color name="message_grey_time">#B4B4B4</color>
     <color name="message_grey_line">#E9E8E8</color>
