--- a/app/src/main/res/drawable/message_input_bg.xml
+++ b/app/src/main/res/drawable/message_input_bg.xml
@@ -2,8 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/message_yellow_bg"/>
-            <corners android:radius="16dp" />
+            <solid android:color="@color/white"/>
+            <corners android:radius="8dp" />
+            <stroke android:width="1dp"
+                android:color="@color/message_grey_line" />
         </shape>
     </item>
 </selector>
