--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,21 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="android:fontFamily">sans-serif-condensed-light</item>
         <item name="android:textColor">@color/black</item>
 
+        <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="android:buttonStyle">@style/ButtonStyle</item>
+
     </style>
+
+    <style name="TextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
+    </style>
+
+    <style name="ButtonStyle" parent="android:Widget.Holo.Button">
+        <item name="android:fontFamily">sans-serif-condensed-light</item>
+    </style>
+
 
     <style name="p10">
         <item name="android:padding">10dp</item>
@@ -120,25 +131,63 @@
         <item name="android:paddingLeft">10dp</item>
     </style>
 
+    <style name="Messenger.ChatListMessage">
+        <item name="android:textColor">@color/message_grey_text</item>
+    </style>
+
+    <style name="Messenger.ChatListContent.Time">
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:textColor">@color/message_grey_time</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
     <style name="Messenger.UserName">
-        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Messenger.Item">
-        <item name="android:layout_margin">4dp</item>
-        <item name="android:padding">2dp</item>
+        <item name="android:background">@drawable/message_transparent_bg_rounded</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+    </style>
+
+    <style name="Messenger.Item.Received" >
+        <item name="android:background">@drawable/message_yellow_bg_rounded</item>
+    </style>
+
+    <style name="Messenger.DayTime">
+        <item name="android:textColor">@color/message_grey_time</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">10dp</item>
     </style>
 
     <style name="Messenger.Message">
-        <item name="android:textColor">@color/message_grey_text</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Messenger.Time">
-        <item name="android:paddingRight">10dp</item>
         <item name="android:textColor">@color/message_grey_time</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">11sp</item>
+    </style>
+
+    <style name="Messenger.Message.Input">
+        <item name="android:background">@drawable/message_input_bg</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginEnd">10dp</item>
     </style>
 
     <!--Messenger end-->
