--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,12 +16,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="19dp"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="41dp"
         app:srcCompat="@drawable/btn_radio_shape" />
 
     <TextView
         android:id="@+id/nav_name"
-        style="@style/Nav.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/nav_image"
@@ -41,149 +40,89 @@
         android:layout_marginTop="6dp"
         android:text="Text T" />
 
-    <LinearLayout
+    <androidx.gridlayout.widget.GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/nav_image"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="22dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="14dp"
+        android:layout_weight="1"
+        app:columnCount="3"
+        app:rowCount="3">
 
-        <TableLayout
+        <ImageView
+            android:id="@+id/imageView"
+            style="@style/Nav.Icon"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="25dp"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center"
+            app:srcCompat="@drawable/ic_currency_usd" />
 
-            <TableRow
-                style="@style/Nav.Widget.Row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="visible">
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    style="@style/Nav.Widget.Icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    app:srcCompat="@drawable/ic_currency_usd" />
-
-            </TableRow>
-
-            <TableRow
-                style="@style/Nav.Widget.Row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/textView11"
-                    style="@style/Nav.Widget.Text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10.30" />
-            </TableRow>
-
-            <TableRow
-                style="@style/Nav.Widget.Row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    style="@style/Nav.Widget.SubText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/total_earned" />
-            </TableRow>
-
-        </TableLayout>
-
-        <TableLayout
+        <ImageView
+            style="@style/Nav.Icon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="25dp"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center"
+            app:srcCompat="@drawable/ic_bookmark_outline" />
 
-            <TableRow
-                style="@style/Nav.Widget.Row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="visible">
+        <ImageView
+            style="@style/Nav.Icon"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center"
+            app:srcCompat="@drawable/ic_grin_beam" />
 
-                <ImageView
-                    style="@style/Nav.Widget.Icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    app:srcCompat="@drawable/ic_bookmark_outline" />
-
-            </TableRow>
-
-            <TableRow
-                style="@style/Nav.Widget.Row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    style="@style/Nav.Widget.Text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1" />
-            </TableRow>
-
-            <TableRow
-                style="@style/Nav.Widget.Row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    style="@style/Nav.Widget.SubText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/order_count" />
-            </TableRow>
-
-        </TableLayout>
-
-        <TableLayout
+        <TextView
+            android:id="@+id/textView11"
+            style="@style/Nav.InfoText"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:text="10.30"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center" />
 
-            <TableRow
-                style="@style/Nav.Widget.Row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="visible">
+        <TextView
+            style="@style/Nav.InfoText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center" />
 
-                <ImageView
-                    style="@style/Nav.Widget.Icon"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    app:srcCompat="@drawable/ic_grin_beam" />
+        <TextView
+            style="@style/Nav.InfoText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5/5"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center" />
 
-            </TableRow>
+        <TextView
+            style="@style/Nav.InfoSubText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/total_earned"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center" />
 
-            <TableRow
-                style="@style/Nav.Widget.Row"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+        <TextView
+            style="@style/Nav.InfoSubText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/trip_count"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center" />
 
-                <TextView
-                    style="@style/Nav.Widget.Text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="5/5" />
-            </TableRow>
-
-            <TableRow
-                style="@style/Nav.Widget.Row"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
-
-                <TextView
-                    style="@style/Nav.Widget.SubText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/rating" />
-            </TableRow>
-
-        </TableLayout>
-    </LinearLayout>
+        <TextView
+            style="@style/Nav.InfoSubText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rating"
+            app:layout_columnWeight="1"
+            app:layout_gravity="center" />
+    </androidx.gridlayout.widget.GridLayout>
 
 </RelativeLayout>
 
