--- a/app/src/main/res/layout/sheet_passenger.xml
+++ b/app/src/main/res/layout/sheet_passenger.xml
@@ -12,104 +12,207 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
                 <ImageView
                     android:id="@+id/user_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/googleg_standard_color_18" />
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="15dp"
+                    app:srcCompat="@drawable/btn_radio_shape" />
 
                 <TextView
                     android:id="@+id/user_name"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/user_image"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_toEndOf="@+id/user_image"
                     android:layout_weight="1"
                     android:text="Full name" />
 
-                <LinearLayout
-                    android:id="@+id/location_info"
+                <TextView
+                    android:id="@+id/textView32"
+                    style="@style/Sheet.LocationInfoMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/user_name"
+                    android:layout_alignStart="@+id/user_name"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="4dp"
+                    android:text="Hi! Some went to Kiev?" />
+
+            </RelativeLayout>
+
+            <androidx.cardview.widget.CardView
+                style="@style/Sheet.LocationCardInfo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <androidx.gridlayout.widget.GridLayout
+                    style="@style/Sheet.LocationContent"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:visibility="visible">
+                    app:columnCount="3"
+                    app:rowCount="3">
 
-                    <Button
-                        android:id="@+id/location_btn"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Change location"
-                        android:visibility="gone" />
 
-                    <TextView
-                        android:id="@+id/textView15"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Location time" />
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        style="@style/Sheet.LocationIcon"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:alpha="0.3"
+                        app:layout_columnWeight="1"
+                        app:layout_gravity="center"
+                        app:srcCompat="@drawable/ic_clock" />
+
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        style="@style/Sheet.LocationIcon"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        app:layout_columnWeight="1"
+                        app:layout_gravity="center"
+                        app:srcCompat="@drawable/ic_smile" />
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        style="@style/Sheet.LocationIcon"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        app:layout_columnWeight="1"
+                        app:layout_gravity="center"
+                        app:srcCompat="@drawable/ic_bookmark_outline" />
 
                     <TextView
                         android:id="@+id/location_time"
-                        android:layout_width="match_parent"
+                        style="@style/Sheet.LocationInfoText"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="00:00" />
+                        android:text="00:00"
+                        app:layout_columnWeight="1"
+                        app:layout_gravity="center" />
 
-                </LinearLayout>
+                    <TextView
+                        android:id="@+id/textView31"
+                        style="@style/Sheet.LocationInfoText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1"
+                        app:layout_columnWeight="1"
+                        app:layout_gravity="center" />
 
-                <LinearLayout
-                    android:id="@+id/request_info"
+                    <TextView
+                        style="@style/Sheet.LocationInfoText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="2"
+                        app:layout_columnWeight="1"
+                        app:layout_gravity="center" />
+
+                    <TextView
+                        android:id="@+id/textView30"
+                        style="@style/Sheet.LocationInfoSubText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/location_time"
+                        app:layout_columnWeight="1"
+                        app:layout_gravity="center" />
+
+                    <TextView
+                        style="@style/Sheet.LocationInfoSubText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/passenger_count"
+                        app:layout_columnWeight="1"
+                        app:layout_gravity="center" />
+
+                    <TextView
+                        style="@style/Sheet.LocationInfoSubText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/trip_count"
+                        app:layout_columnWeight="1"
+                        app:layout_gravity="center" />
+
+                </androidx.gridlayout.widget.GridLayout>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:id="@+id/location_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:visibility="visible">
+
+                <Button
+                    android:id="@+id/location_btn"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:visibility="gone">
+                    android:text="Change location"
+                    android:visibility="gone" />
 
-                    <TextView
-                        android:id="@+id/request_status"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Request on route sended" />
+            </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/request_message"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="TextView" />
+            <LinearLayout
+                android:id="@+id/request_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:visibility="gone">
 
-                    <EditText
-                        android:id="@+id/request_message_inp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:gravity="start|top"
-                        android:hint="Message to driver"
-                        android:inputType="textMultiLine" />
+                <TextView
+                    android:id="@+id/request_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Request on route sended" />
 
-                    <Button
-                        android:id="@+id/request_btn"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Send request" />
+                <TextView
+                    android:id="@+id/request_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
 
-                    <Button
-                        android:id="@+id/request_cancel_btn"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Cancel request" />
+                <EditText
+                    android:id="@+id/request_message_inp"
+                    style="@style/Messenger.Message.Input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:gravity="start|top"
+                    android:hint="@string/message_input_placeholder"
+                    android:inputType="textMultiLine" />
 
-                </LinearLayout>
+                <Button
+                    android:id="@+id/request_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/send_request" />
+
+                <Button
+                    android:id="@+id/request_cancel_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Cancel request" />
 
             </LinearLayout>
 
